@@ -15,6 +15,7 @@ Revision history for Math-BigNum
         - Added the following exportable functions:
 
                 factorial(n)       # product of first n integers: n!
+                primorial(n)       # product of primes <= n
                 binomial(n,k)      # binomial coefficient
                 fibonacci(n)       # nth-Fibonacci number
                 lucas(n)           # nth-Lucas number
@@ -27,6 +28,7 @@ Revision history for Math-BigNum
         - Extended the method `float` to accept an optional argument with the number of bits of precision.
         - Added the `$x->bfloat` method, which truncates `$x` in-place to a floating-point value.
         - Added the `(b)fmod` and `(b)fpow` floating-point methods.
+        - New method: `$n->is_pow($k)`, which returns true iff `a^k = n` for some positive integer `a`.
         - Some minor bug-fixes and documentation improvements.
 
 0.10    2016-17-08
